# fosho-v1

./: Anchor.toml  package.json
programs/fosho-program/: Cargo.toml
programs/fosho-program/src/: constant.rs  error.rs  lib.rs  utils.rs
programs/fosho-program/src/instructions/: cancel_event.rs  claim_rewards.rs  create_community.rs  create_event.rs  join_event.rs  mod.rs  reject_attendance.rs  verify_attendance.rs
programs/fosho-program/src/state/: attendee.rs  community.rs  event.rs  mod.rs
tests/: fosho-program.ts
